--- a/.github/workflows/nightly.yaml
+++ b/.github/workflows/nightly.yaml
@@ -26,43 +26,45 @@ jobs:
       - name: Create build matrix
         id: build
         run: |
-            build_matrix=""
-            for file in config/boards/*; do
-                COMPATIBLE_SUITES=()
-                COMPATIBLE_FLAVORS=()
-                source "${file}" || { echo "Error loading ${file}"; exit 1; }
-                for suite in "${COMPATIBLE_SUITES[@]}"; do
-                    for flavor in "${COMPATIBLE_FLAVORS[@]}"; do
-                    build_matrix+="{\"board\":\"$(basename "${file%.sh}")\",\"suite\":\"${suite}\",\"flavor\":\"${flavor}\"},"
-                    done
-                done
+          build_matrix=""
+          for file in config/boards/*; do
+            COMPATIBLE_SUITES=()
+            COMPATIBLE_FLAVORS=()
+            source "${file}" || { echo "Error loading ${file}"; exit 1; }
+            for suite in "${COMPATIBLE_SUITES[@]}"; do
+              for flavor in "${COMPATIBLE_FLAVORS[@]}"; do
+                build_matrix+="{\"board\":\"$(basename "${file%.sh}")\",\"suite\":\"${suite}\",\"flavor\":\"${flavor}\"},"
+              done
             done
-            if [ -z "$build_matrix" ]; then
-              echo "build_matrix={\"include\":[]}" >> $GITHUB_OUTPUT
-            else
-              echo "build_matrix={\"include\":[${build_matrix::-1}]}" >> $GITHUB_OUTPUT
-            fi
+          done
+          if [ -z "$build_matrix" ]; then
+            echo "build_matrix={\"include\":[]}" >> $GITHUB_OUTPUT
+          else
+            echo "build_matrix={\"include\":[${build_matrix::-1}]}" >> $GITHUB_OUTPUT
+          fi
+
       - name: Create rootfs matrix
         id: rootfs
         run: |
-            rootfs_matrix=""
-            for suite in config/suites/*; do
-                for flavor in config/flavors/*; do
-                    rootfs_matrix+="{\"suite\":\"$(basename "${suite%.sh}")\",\"flavor\":\"$(basename "${flavor%.sh}")\"},"
-                done
+          rootfs_matrix=""
+          for suite in config/suites/*; do
+            for flavor in config/flavors/*; do
+              rootfs_matrix+="{\"suite\":\"$(basename "${suite%.sh}")\",\"flavor\":\"$(basename "${flavor%.sh}")\"},"
             done
-            if [ -z "$rootfs_matrix" ]; then
-              echo "rootfs_matrix={\"include\":[]}" >> $GITHUB_OUTPUT
-            else
-              echo "rootfs_matrix={\"include\":[${rootfs_matrix::-1}]}" >> $GITHUB_OUTPUT
-            fi
+          done
+          if [ -z "$rootfs_matrix" ]; then
+            echo "rootfs_matrix={\"include\":[]}" >> $GITHUB_OUTPUT
+          else
+            echo "rootfs_matrix={\"include\":[${rootfs_matrix::-1}]}" >> $GITHUB_OUTPUT
+          fi
+
   rootfs:
     runs-on: ubuntu-22.04
     name: Build rootfs (${{ matrix.suite }}-${{ matrix.flavor }})
     needs: [config]
     strategy:
-        matrix: ${{ fromJson(needs.config.outputs.rootfs_matrix) }}
-        fail-fast: false
+      matrix: ${{ fromJson(needs.config.outputs.rootfs_matrix) }}
+      fail-fast: false
     timeout-minutes: 180
     steps:
       - name: Get more disk space
@@ -86,6 +88,7 @@ jobs:
           ls -la
           ls -la config/suites/
           df -h
+
       - name: Set environment variables
         id: vars
         run: |
@@ -97,12 +100,14 @@ jobs:
           echo "rootfs_zip_name=$ROOTFS_ZIP_NAME" >> $GITHUB_OUTPUT
           echo "rootfs_tar_name=$ROOTFS_TAR_NAME" >> $GITHUB_OUTPUT
           echo "rootfs_download_url=$ROOTFS_DOWNLOAD_URL" >> $GITHUB_OUTPUT
+
       - name: Install GitHub CLI (if missing)
         run: |
           if ! command -v gh &> /dev/null; then
             sudo apt update && sudo apt install -y gh
           fi
           gh --version
+
       - name: Authenticate GitHub CLI
         run: echo "${{ secrets.GITHUB_TOKEN }}" | gh auth login --with-token
 
@@ -125,6 +130,7 @@ jobs:
             echo "❌ Remote rootfs zip not found or release missing"
             echo "remote_exists=false" >> $GITHUB_OUTPUT
           fi
+
       - name: Download remote rootfs zip (if exists)
         if: steps.check_remote_rootfs.outputs.remote_exists == 'true'
         run: |
@@ -133,6 +139,7 @@ jobs:
           ls -la ${{ github.workspace }}/build/${{ steps.vars.outputs.rootfs_zip_name }}
           unzip -o ${{ github.workspace }}/build/${{ steps.vars.outputs.rootfs_zip_name }} -d ${{ github.workspace }}/build/
           ls -la ${{ github.workspace }}/build/${{ steps.vars.outputs.rootfs_tar_name }} || { echo "Unzip failed"; exit 1; }
+
       - name: Install full build dependencies (only if remote rootfs not found)
         if: steps.check_remote_rootfs.outputs.remote_exists == 'false'
         shell: bash
@@ -146,10 +153,11 @@ jobs:
             python-is-python3 fdisk bc debhelper python3-pyelftools python3-setuptools \
             python3-distutils python3-pkg-resources swig libfdt-dev libpython3-dev dctrl-tools \
             opencl-c-headers ocl-icd-opencl-dev dmraid libgpgme11-dev \
-            live-build ubuntu-keyring
+            live-build ubuntu-keyring devscripts dh-exec lintian
           sudo update-binfmts --enable qemu-aarch64
           ls /usr/bin/qemu-aarch64-static
           update-binfmts --display qemu-aarch64
+
       - name: Add execute permission to scripts (only if remote rootfs not found)
         if: steps.check_remote_rootfs.outputs.remote_exists == 'false'
         run: |
@@ -157,6 +165,7 @@ jobs:
           chmod +x ./scripts/*.sh
           ls -la ./build.sh
           ls -la ./scripts/build-rootfs.sh
+
       - name: Create correct chroot/rootfs directories (only if remote rootfs not found)
         if: steps.check_remote_rootfs.outputs.remote_exists == 'false'
         shell: bash
@@ -166,12 +175,14 @@ jobs:
           sudo chmod 777 -R ${{ github.workspace }}/build/chroot
           sudo chmod 777 -R ${{ github.workspace }}/build/rootfs
           ls -la ${{ github.workspace }}/build/
+
       - name: Build rootfs (only if remote rootfs not found)
         if: steps.check_remote_rootfs.outputs.remote_exists == 'false'
         shell: bash
         run: |
           cd ${{ github.workspace }}
           sudo bash -x ./build.sh --suite=${{ matrix.suite }} --flavor=${{ matrix.flavor }} --rootfs-only 2>&1 | tee build-rootfs.log
+
       - name: Save build log (debug)
         uses: actions/upload-artifact@v4.3.3
         with:
@@ -190,8 +201,7 @@ jobs:
             ls -la ${{ github.workspace }}/build/
             exit 1
           fi
-      
-      # 新增：缓存 Rootfs 产物（跨 Job 复用）
+
       - name: Cache Rootfs
         uses: actions/cache@v3
         with:
@@ -203,19 +213,19 @@ jobs:
       - name: Upload rootfs artifact
         uses: actions/upload-artifact@v4.3.3
         with:
-            name: ${{ env.ROOTFS_FILE_PREFIX }}-${{ steps.vars.outputs.suite_version }}-preinstalled-${{ matrix.flavor }}-${{ env.ROOTFS_ARCH }}-rootfs
-            path: ${{ github.workspace }}/build/${{ steps.vars.outputs.rootfs_tar_name }}
-            if-no-files-found: error
-            compression-level: 6
-            overwrite: false
+          name: ${{ env.ROOTFS_FILE_PREFIX }}-${{ steps.vars.outputs.suite_version }}-preinstalled-${{ matrix.flavor }}-${{ env.ROOTFS_ARCH }}-rootfs
+          path: ${{ github.workspace }}/build/${{ steps.vars.outputs.rootfs_tar_name }}
+          if-no-files-found: error
+          compression-level: 6
+          overwrite: false
 
   build:
     runs-on: ubuntu-22.04
     name: Build image (${{ matrix.board }}-${{ matrix.suite }}-${{ matrix.flavor }})
     needs: [rootfs, config]
     strategy:
-        matrix: ${{ fromJson(needs.config.outputs.build_matrix) }}
-        fail-fast: false
+      matrix: ${{ fromJson(needs.config.outputs.build_matrix) }}
+      fail-fast: false
     timeout-minutes: 180
     steps:
       - name: Get more disk space
@@ -239,11 +249,13 @@ jobs:
           ls -la
           ls -la config/boards/
           df -h
+
       - name: Set environment variables
         id: vars
         run: |
           source config/suites/${{ matrix.suite }}.sh || { echo "Error loading suite config"; exit 1; }
           echo "suite_version=$RELEASE_VERSION" >> $GITHUB_OUTPUT
+
       - name: Set DEB Asset Name
         id: deb-asset
         run: |
@@ -251,12 +263,14 @@ jobs:
           DEB_DOWNLOAD_URL="https://github.com/${{ env.REPO_OWNER }}/${{ env.REPO_NAME }}/releases/download/${{ env.RELEASE_TAG }}/${DEB_ZIP_NAME}"
           echo "deb_zip_name=$DEB_ZIP_NAME" >> $GITHUB_OUTPUT
           echo "deb_download_url=$DEB_DOWNLOAD_URL" >> $GITHUB_OUTPUT
+
       - name: Install GitHub CLI (if missing)
         run: |
           if ! command -v gh &> /dev/null; then
             sudo apt update && sudo apt install -y gh
           fi
           gh --version
+
       - name: Authenticate GitHub CLI
         run: echo "${{ secrets.GITHUB_TOKEN }}" | gh auth login --with-token
 
@@ -279,6 +293,7 @@ jobs:
             echo "❌ Remote deb zip not found or release missing"
             echo "deb_remote_exists=false" >> $GITHUB_OUTPUT
           fi
+
       - name: Download remote DEB zip (if exists)
         if: steps.check_remote_deb.outputs.deb_remote_exists == 'true'
         run: |
@@ -287,6 +302,7 @@ jobs:
           ls -la ${{ github.workspace }}/build/${{ steps.deb-asset.outputs.deb_zip_name }}
           unzip -o ${{ github.workspace }}/build/${{ steps.deb-asset.outputs.deb_zip_name }} -d ${{ github.workspace }}/build/
           ls -la ${{ github.workspace }}/build/*.deb || { echo "Unzip failed"; exit 1; }
+
       - name: Install full build dependencies
         shell: bash
         run: |
@@ -295,8 +311,7 @@ jobs:
             build-essential device-tree-compiler u-boot-tools \
             qemu-user-static binfmt-support debootstrap \
             fdisk parted dosfstools uuid-runtime rsync kmod
-      
-      # 新增：缓存 Deb 包依赖
+
       - name: Cache Deb packages
         uses: actions/cache@v3
         with:
@@ -317,15 +332,13 @@ jobs:
           sudo chmod 777 -R ${{ github.workspace }}/build/chroot
           sudo chmod 777 -R ${{ github.workspace }}/build/rootfs
           ls -la ${{ github.workspace }}/build/
-      
-      # 新增：恢复 Rootfs 缓存（复用 rootfs Job 的产物）
+
       - name: Restore Rootfs Cache
         uses: actions/cache/restore@v3
         with:
           path: ${{ github.workspace }}/build/${{ env.ROOTFS_FILE_PREFIX }}-${{ steps.vars.outputs.suite_version }}-preinstalled-${{ matrix.flavor }}-${{ env.ROOTFS_ARCH }}.rootfs.tar.xz
           key: rootfs-${{ matrix.suite }}-${{ matrix.flavor }}-${{ hashFiles('config/suites/*.sh', 'config/flavors/*.sh') }}
 
-      # 新增：缓存内核编译产物（如果你的 build.sh 包含内核编译）
       - name: Cache Kernel Build
         uses: actions/cache@v3
         with:
@@ -336,11 +349,12 @@ jobs:
           restore-keys: |
             kernel-${{ matrix.board }}-${{ matrix.suite }}-
 
-      - name: Build image (保留错误输出，不掩盖问题)
+      - name: Build image
         shell: bash
         run: |
           cd ${{ github.workspace }}
           sudo bash -x ./build.sh --board=${{ matrix.board }} --suite=${{ matrix.suite }} --flavor=${{ matrix.flavor }} 2>&1 | tee build-image.log
+
       - name: Save build log (debug)
         uses: actions/upload-artifact@v4.3.3
         with:
@@ -353,6 +367,7 @@ jobs:
           echo "=== Images directory contents ==="
           ls -la ${{ github.workspace }}/images/ || echo "Images directory not found"
           ls -la ${{ github.workspace }}/build/
+
       - name: Upload image artifact
         uses: actions/upload-artifact@v4.3.3
         with:
